Fixed overlap of dot grid

--- a/assets/scss/common/_global.scss
+++ b/assets/scss/common/_global.scss
@@ -268,7 +268,7 @@ body {
  }
  .background-pattern-top {
   background-image:linear-gradient(rgba(24,29,44,0), #181d2c),url(../images/small-dot-pattern.png);
-  height:140%
+  height:115%
  }
  .background-pattern-getstarted {
   background-image:linear-gradient(#181d2c, rgba(24,29,44,0)),url(../images/small-dot-pattern.png);
